2014-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DTextureCoordinateEditorInterface.h:
	* X3DTextureCoordinateEditorInterface.cpp: 

2014-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.xml:
	* TextureCoordinateEditor.xml:
	* TextureCoordinateEditorLeftPreview.x3dv:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditorRightPreview.x3dv:
	* TextureCoordinateEditor.cpp: 

2014-11-19  Holger Seelig  <holger.seelig@yahoo.de>

	* FaceSelection.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-19  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-17  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.cpp: 

2014-11-17  Holger Seelig  <holger.seelig@yahoo.de>

	* FaceSelection.h:
	* ColorPerVertexEditor.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-17  Holger Seelig  <holger.seelig@yahoo.de>

	* FaceSelection.h:
	* FaceSelection.cpp: 

2014-11-17  Holger Seelig  <holger.seelig@yahoo.de>

	* FaceSelection.h:
	* FaceSelection.cpp:
	* ColorPerVertexEditor.cpp:
	* TextureCoordinateEditor.cpp: 

2014-11-16  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* FaceSelection.h:
	* FaceSelection.cpp:
	* AppearanceEditor.h:
	* TextureCoordinateEditor.xml:
	* ColorPerVertexEditor.h:
	* ColorPerVertexEditor.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-16  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DUserInterface.cpp:
	* BrowserWindow.xml:
	* TextureCoordinateEditor.xml:
	* X3DColorPerVertexEditorInterface.h:
	* ColorPerVertexEditorPreview.x3dv:
	* X3DColorPerVertexEditorInterface.cpp:
	* ColorPerVertexEditor.h:
	* X3DTextureCoordinateEditorInterface.h:
	* ColorPerVertexEditor.cpp:
	* X3DTextureCoordinateEditorInterface.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-15  Holger Seelig  <holger.seelig@yahoo.de>
