@@ -22,6 +22,8 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
+        <signal name="key-press-event" handler="on_key_press_event" swapped="no"/>
+        <signal name="key-release-event" handler="on_key_release_event" swapped="no"/>
         <child>
           <object class="GtkMenuBar" id="menubar2">
             <property name="visible">True</property>
