@@ -1,5 +1,15 @@
 2014-11-20  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* FaceSelection.h:
+	* FaceSelection.cpp:
+	* TextureCoordinateEditor.xml:
+	* X3DTextureCoordinateEditorInterface.h:
+	* X3DTextureCoordinateEditorInterface.cpp:
+	* TextureCoordinateEditor.h:
+	* TextureCoordinateEditor.cpp: 
+
+2014-11-20  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* X3DTextureCoordinateEditorInterface.h:
 	* X3DTextureCoordinateEditorInterface.cpp: 
 
